Chenged signup and login to return token instead of in cookie
