# backend/docs/users/swagger.json
@@ -166,15 +166,15 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.UserAndPass"
+                            "$ref": "#/definitions/auth.UnEncrypted"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Success",
+                        "description": "User login token",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/auth.Token"
                         }
                     },
                     "400": {
@@ -259,9 +259,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "users",
+                        "description": "User login token",
                         "schema": {
-                            "$ref": "#/definitions/userdb.User"
+                            "$ref": "#/definitions/auth.Token"
                         }
                     },
                     "400": {
@@ -324,9 +324,20 @@
         }
     },
     "definitions": {
-        "auth.UserAndPass": {
+        "auth.Token": {
             "type": "object",
             "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.UnEncrypted": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
                 "password": {
                     "type": "string"
                 },
